update from codespaces

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8088
-#数据库连接池配置
+# Database connection pool configuration
 spring.datasource.name=zjptest
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.filters=stat
@@ -8,6 +8,6 @@ spring.datasource.druid.url=jdbc:mysql://localhost:3306/zjptest?useUnicode=true&
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 
-#mybatis配置
+# mybatis configuration
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package= com.zjp.echartsdemo.echartsdemo.entity
