--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 server.port=8088
 # Database connection pool configuration
-spring.datasource.name=zjptest
+spring.datasource.name=university
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.filters=stat
-spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/zjptest?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=UTC
+spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/university?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=UTC
 spring.datasource.druid.username=root
-spring.datasource.druid.password=root
+spring.datasource.druid.password=1234
 
 # mybatis configuration
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package= com.zjp.echartsdemo.echartsdemo.entity
+mybatis.type-aliases-package= com.zjp.echartsdemo.entity
+
+
+# reference links
+# https://www.cnblogs.com/jingpeng77/p/12997387.html
