--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/university?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=UTC
 spring.datasource.druid.username=root
 spring.datasource.druid.password=1234
-
+logging.level.web=WARN
+# spring.mvc=/static/**
 # mybatis configuration
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package= com.zjp.echartsdemo.entity
