--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     mode: HTML5
     encoding: UTF-8
   datasource:
-    url: jdbc:mysql://localhost:3306/university?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/university?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -20,7 +20,7 @@ spring:
   # mvc:
   # static-path-pattern: /static/**
 server:
-  port: 8181
+  port: 8002
 # 配置SQL日志
 mybatis:
   mapper-locations: classpath:mapper/*.xml
