--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     </parent>
     <groupId>com.zjp</groupId>
     <packaging>war</packaging>
-    <artifactId>echartsdemo</artifactId>
+    <artifactId>bigData</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>echartsdemo</name>
+    <name>bigData</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -28,6 +28,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!-- 将原来的内置tomcat依赖scope改为provided-->
+        <!-- 内置tomcat -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -39,13 +46,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- 将原来的内置tomcat依赖scope改为provided-->
-        <!-- 内置tomcat -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -115,15 +116,19 @@
     <build>
         <finalName>bigData</finalName><!--war包名字-->
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <source>1.8</source>-->
+<!--                    <target>1.8</target>-->
+<!--                </configuration>-->
 
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
+<!--                war包-执行程序入口-->
+                <!-- <configuration>-->
+<!--                    <mainClass>com.zjp.echartsdemo.EchartsdemoApplication</mainClass>-->
+<!--                </configuration> -->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -134,6 +139,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                   <source>1.8</source>
+                   <target>1.8</target>
+                   <mainClass>com.zjp.echartsdemo.EchartsdemoApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
